--- a/iters-web/src/main/resources/templates/login.html
+++ b/iters-web/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
 <div class="copyright">版权所有@<span style="color:#f77118">2019 </span>杭州星辉科技股份集团有限公司</div>
 <script type="text/javascript" src="statics/assets/js/jquery.js"></script>
 <script type="text/javascript">
-	function login(){debugger;
+	function login(){
 		console.log("ssss");
 		var username = $('#username').val();
 		var password = $('#password').val();
