--- a/iters-web/src/main/resources/statics/assets/css/common.css
+++ b/iters-web/src/main/resources/statics/assets/css/common.css
@@ -134,3 +134,138 @@ float:right;
     border: 1px solid #C8C8C8;
     margin-left: 20px;
 }
+ .partBox {
+     position: absolute;
+     background: #fff;
+     top: 100%;
+     z-index: 1;
+     border: 1px solid #ccc;
+     padding: 10px 20px;
+     white-space: nowrap;
+     left: 90px;
+     margin-top: 10px;
+     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+ }
+.grid-search .form-group>span {
+    width: 90px;
+}
+.l-modal-query{
+    width: 750px;
+    height: 500px;
+}
+.grid-search .form-group>input,
+.grid-search .form-group>select {
+    width: 160px!important;
+}
+.formdiv{
+    margin-bottom: 20px;
+
+}
+.formdiv label{
+    margin-right: 5px;
+}
+.formdiv input{
+    border-radius: 5px;
+    width:150px;
+    height: 26px;
+    border:1px solid #d2d2d2;
+    padding:0 10px;
+}
+.formdiv select{
+    border-radius: 5px;
+    width:150px;
+    height: 26px;
+    border:1px solid #d2d2d2;
+    padding:0 10px;
+}
+textarea{
+    width:600px;
+    height:200px;
+    border-radius: 5px;
+    border:1px solid #d2d2d2;
+    padding:0 10px;
+    resize:none;
+}
+.checkbox{
+    width:500px;
+
+}
+.checkbox input{
+    width:15px;
+    height: 15px;
+    margin-right: 10px;
+    margin-bottom: 14px;
+    position:inherit;
+}
+.checkbox label{
+    width:80px;
+    height:20px;
+    line-height:20px;
+}
+.sendtime input[type=radio]{
+    width:15px;
+    height: 15px;
+}
+.radiobox input[type=radio]{
+    width:15px;
+    height: 15px;
+
+}
+.radiobox >div{
+    margin-right:30px;
+}
+.memberbox{
+    width:450px;
+    margin-left:10px;
+}
+.memberbox input[type=checkbox]{
+    width:15px;
+    height:15px;
+}
+.member{
+    min-width:70px;
+}
+.organizition{
+    width: 180px;
+    position: relative;
+    min-height: 100px;
+}
+#deptListTree{
+    width: 90px;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+#childtree{
+    width: 90px;
+    min-height: 100px;
+    position: absolute;
+    left: 20px;
+    top: 25px;
+}
+#deptListTree input[type=checkbox]{
+    width: 15px;
+    height: 15px;
+    float: left;
+    margin: 3px 3px 0 0;
+}
+#deptListTree div{
+    cursor:pointer;
+}
+#childtree input[type=checkbox]{
+    width: 15px;
+    height: 15px;
+    float: left;
+    margin: 3px 3px 0 0;
+}
+#childtree div{
+    cursor:pointer;
+}
+.memberlist{
+    wdith:450px;
+    margin-left:30px;
+}
+.memberlist span{
+    margin-right:30px;
+}
