--- a/iters-web/src/main/resources/templates/page/locationStatic.html
+++ b/iters-web/src/main/resources/templates/page/locationStatic.html
@@ -45,14 +45,16 @@
 </table>
     <p class="my_static" id="chart">
     </p>
-    <p class="book_foot"><input type="button" value="导出"/><input type="button" value="打印"/><input type="button" value="关闭"/></p>
+    <p class="book_foot"><input type="button" value="导出"/><input type="button" value="打印"/><input onclick="closeStatic()" type="button"  value="关闭"/></p>
 </div>
 <script  src="statics/assets/js/jquery.js"></script>
 <script  src="statics/assets/js/echarts/echarts.js"></script>
 <script src="statics/assets/js/locationStatic.js"></script>
 <script src="statics/assets/js/work.js"></script>
 <script >
+    function  closeStatic() {debugger;
 
+    }
     var count = [];
     var name;
     var names = [];
@@ -76,7 +78,7 @@
                     if (name.indexOf(",") >= 0 ) {
                         names = name.split(",")
                     }else {
-                        names = [name]
+                        names = [name];
                     }
                     console.log(count);
                     console.log(names);
@@ -88,6 +90,7 @@
                 }
             }
         });
+
         var myChart = echarts.init($("#chart")[0]);
 
         option = {
