--- a/iters-web/src/main/resources/templates/page/locationStatic.html
+++ b/iters-web/src/main/resources/templates/page/locationStatic.html
@@ -35,9 +35,9 @@
         </tr>
         <tr>
             <td><label class="td_label">开始时间</label></td>
-            <td>2016年11月10日</td>
+            <td id="startTime"></td>
             <td><label class="td_label">结束时间</label></td>
-            <td>2016年12月10日</td>
+            <td id="endsTime"></td>
         </tr>
         <tr>
             <td><label class="td_label">发表文章最多的部门</label></td>
@@ -60,10 +60,11 @@
 <script src="statics/assets/js/work.js"></script>
 <script>
 
-    var count = [];
+    var counts = [];
+    var count ;
     var name;
     var names = [];
-
+    var defer = $.Deferred();
     function querys() {
         var beginTime = $("#beginTime").val()
         var endTime = $("#endTime").val()
@@ -73,20 +74,28 @@
         console.log(data);
         $.ajax({
             type: "GET",
-            async: false,
             url: "locationStatic/staticCountNumberAll",
             data: data,
             dataType: "json",
             success: function (result) {
                 if (result.code == 100) {
-                    $.each(result.data.locationStaticDotList, function (index, value) {
-                        count[index] = value.count;
+                    $.each(result.data.locationStaticDotList, function (index, value) {debugger;
+                        if(index==0){
+                            count = value.count;
+                        }else{
+                            count = count + ","+value.count
+                        }
                         if (index == 0) {
                             name = value.name;
                         } else {
                             name = name + "," + value.name;
                         }
-                    })
+                    });
+                    if (count.indexOf(",") >= 0) {
+                        counts = count.split(",")
+                    } else {
+                        counts = [count]
+                    }
                     if (name.indexOf(",") >= 0) {
                         names = name.split(",")
                     } else {
@@ -94,101 +103,107 @@
                     }
                     console.log(count);
                     console.log(names);
+                    defer.resolve(result.data.locationStaticDotList);
+                    var myChart = echarts.init($("#chart")[0]);
+                    option = {
+                        title: {
+                            x: 'center',
+                            text: '部门发表文章每日统计',
+
+                        },
+                        tooltip: {
+                            trigger: 'item'
+                        },
+
+                        calculable: true,
+                        grid: {
+                            borderWidth: 0,
+                            y: 80,
+                            y2: 60
+                        },
+                        xAxis: [
+                            {
+                                type: 'category',
+                                show: true,
+                                data: names
+                            }
+                        ],
+
+                        yAxis: [
+                            {
+                                type: 'value',
+                                show: true
+                            }
+                        ],
+                        series: [
+                            {
+                                name: '部门文章统计图',
+                                type: 'bar',
+                                itemStyle: {
+                                    normal: {
+                                        color: function (params) {
+                                            // build a color map as your need.
+                                            var colorList = [
+                                                '#C1232B', '#B5C334', '#FCCE10', '#E87C25', '#27727B',
+                                                '#FE8463', '#9BCA63', '#FAD860', '#F3A43B', '#60C0DD',
+                                                '#D7504B', '#C6E579', '#F4E001', '#F0805A', '#26C0C0'
+                                            ];
+                                            return colorList[params.dataIndex]
+                                        },
+                                        label: {
+                                            show: true,
+                                            position: 'top',
+                                            formatter: '{b}\n{c}'
+                                        }
+                                    }
+                                },
+                                data: counts,
+                                markPoint: {
+                                    tooltip: {
+                                        trigger: 'item',
+                                        backgroundColor: 'rgba(0,0,0,0)',
+                                        formatter: function (params) {
+                                            return '<img src="'
+                                                + params.data.symbol.replace('image://', '')
+                                                + '"/>';
+                                        }
+                                    },
+                                    data: [
+                                        {xAxis: 0, y: 25, name: 'Line', symbolSize: 20, symbol: 'image://../asset/ico/折线图.png'},
+                                        {xAxis: 1, y: 25, name: 'Bar', symbolSize: 20, symbol: 'image://../asset/ico/柱状图.png'},
+                                        {xAxis: 2, y: 25, name: 'Scatter', symbolSize: 20, symbol: 'image://../asset/ico/散点图.png'},
+                                        {xAxis: 3, y: 25, name: 'K', symbolSize: 20, symbol: 'image://../asset/ico/K线图.png'},
+                                        {xAxis: 4, y: 25, name: 'Pie', symbolSize: 20, symbol: 'image://../asset/ico/饼状图.png'},
+                                        {xAxis: 5, y: 25, name: 'Radar', symbolSize: 20, symbol: 'image://../asset/ico/雷达图.png'},
+                                        {xAxis: 6, y: 25, name: 'Chord', symbolSize: 20, symbol: 'image://../asset/ico/和弦图.png'},
+                                        {xAxis: 7, y: 25, name: 'Force', symbolSize: 20, symbol: 'image://../asset/ico/力导向图.png'},
+                                        {xAxis: 8, y: 25, name: 'Map', symbolSize: 20, symbol: 'image://../asset/ico/地图.png'},
+                                        {xAxis: 9, y: 25, name: 'Gauge', symbolSize: 20, symbol: 'image://../asset/ico/仪表盘.png'},
+                                        {xAxis: 10, y: 25, name: 'Funnel', symbolSize: 20, symbol: 'image://../asset/ico/漏斗图.png'},
+                                    ]
+                                }
+                            }
+                        ]
+                    };
+                    myChart.setOption(option);
                     $("#dep_Num").html(result.data.sum + "篇");
                     $("#max").html(result.data.max);
                     $("#min").html(result.data.min);
+                    $("#startTime").html(beginTime);
+                    $("#endsTime").html(endTime);
+
                 } else {
                     console.log(result.message);
                 }
             }
-        });
+        });return defer.promise();
     }
 
-    $(function () {
-        querys();
-        var myChart = echarts.init($("#chart")[0]);
+    $(function () {//页面载入完毕执行此方法
+        $.when(querys()).done(function(){
 
-        option = {
-            title: {
-                x: 'center',
-                text: '部门发表文章每日统计',
 
-            },
-            tooltip: {
-                trigger: 'item'
-            },
-
-            calculable: true,
-            grid: {
-                borderWidth: 0,
-                y: 80,
-                y2: 60
-            },
-            xAxis: [
-                {
-                    type: 'category',
-                    show: true,
-                    data: names
-                }
-            ],
-
-            yAxis: [
-                {
-                    type: 'value',
-                    show: true
-                }
-            ],
-            series: [
-                {
-                    name: '部门文章统计图',
-                    type: 'bar',
-                    itemStyle: {
-                        normal: {
-                            color: function (params) {
-                                // build a color map as your need.
-                                var colorList = [
-                                    '#C1232B', '#B5C334', '#FCCE10', '#E87C25', '#27727B',
-                                    '#FE8463', '#9BCA63', '#FAD860', '#F3A43B', '#60C0DD',
-                                    '#D7504B', '#C6E579', '#F4E001', '#F0805A', '#26C0C0'
-                                ];
-                                return colorList[params.dataIndex]
-                            },
-                            label: {
-                                show: true,
-                                position: 'top',
-                                formatter: '{b}\n{c}'
-                            }
-                        }
-                    },
-                    data: count,
-                    markPoint: {
-                        tooltip: {
-                            trigger: 'item',
-                            backgroundColor: 'rgba(0,0,0,0)',
-                            formatter: function (params) {
-                                return '<img src="'
-                                    + params.data.symbol.replace('image://', '')
-                                    + '"/>';
-                            }
-                        },
-                        data: [
-                            {xAxis: 0, y: 25, name: 'Line', symbolSize: 20, symbol: 'image://../asset/ico/折线图.png'},
-                            {xAxis: 1, y: 25, name: 'Bar', symbolSize: 20, symbol: 'image://../asset/ico/柱状图.png'},
-                            {xAxis: 2, y: 25, name: 'Scatter', symbolSize: 20, symbol: 'image://../asset/ico/散点图.png'},
-                            {xAxis: 3, y: 25, name: 'K', symbolSize: 20, symbol: 'image://../asset/ico/K线图.png'},
-                            {xAxis: 4, y: 25, name: 'Pie', symbolSize: 20, symbol: 'image://../asset/ico/饼状图.png'},
-                            {xAxis: 5, y: 25, name: 'Radar', symbolSize: 20, symbol: 'image://../asset/ico/雷达图.png'},
-                            {xAxis: 6, y: 25, name: 'Chord', symbolSize: 20, symbol: 'image://../asset/ico/和弦图.png'},
-                            {xAxis: 7, y: 25, name: 'Force', symbolSize: 20, symbol: 'image://../asset/ico/力导向图.png'},
-                            {xAxis: 8, y: 25, name: 'Map', symbolSize: 20, symbol: 'image://../asset/ico/地图.png'},
-                            {xAxis: 9, y: 25, name: 'Gauge', symbolSize: 20, symbol: 'image://../asset/ico/仪表盘.png'},
-                            {xAxis: 10, y: 25, name: 'Funnel', symbolSize: 20, symbol: 'image://../asset/ico/漏斗图.png'},
-                        ]
-                    }
-                }
-            ]
-        };
-        myChart.setOption(option);
+    });
     });
 </script>
 
