--- a/iters-web/src/main/resources/templates/page/work.html
+++ b/iters-web/src/main/resources/templates/page/work.html
@@ -32,7 +32,7 @@
 <!--    <a href="#" class="delete"  onclick="delWork()">删除</a>-->
     <a href="javascript:;" class="out" onclick="outWork()">导出</a>
     <!--<a href="javascript:;" class="edit" onclick="openlayer(id)">编辑</a>-->
-    <a href="locationStatic" class="count">统计</a>
+    <a href="locationStatic" onclick="StaticFun()" class="count">统计</a>
     <a href="javascript:;" class="check">审核</a>
 </div>
 <div class="table-box">
@@ -54,5 +54,8 @@
         laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
         laydate({elem: '#demo'});//绑定元素
     }();
+    function StaticFun() {
+        alert("统计成功");
+    }
 </script>
 </html>
