--- a/iters-web/src/main/resources/templates/page/mywork.html
+++ b/iters-web/src/main/resources/templates/page/mywork.html
@@ -19,17 +19,18 @@
 <body onload="Workload()">
 <div class="title"><h2>工作日志</h2></div>
 <div class="query">
+    <input type="text" id="id" style="display: none" value>
     <div class="tabe_bot">
         <div class="l_left"><label>日志标题：</label><input type="text" placeholder="请输入标题" id="tit"></div>
         <div class="l_left"><label>发布人：</label><input type="text" placeholder="请输入姓名" id="person"></div>
         <div class="l_left"><label>发布时间：</label><input id="demo" placeholder="输入年月" /></div>
-        <button class="tabe_btn ">查询</button>
+        <button class="tabe_btn "   onclick="getWorkTableData();">查询</button>
         <div class="clear"></div>
     </div>
 </div>
 <div class="table-operate ue-clear">
     <a href="#" class="add"  onclick="addWork()">添加</a>
-    <a href="javascript:;" class="del">删除</a>
+    <!--<a href="javascript:;" class="del">导出</a>-->
     <!--<a href="javascript:;" class="edit">编辑</a>-->
     <!--<a href="javascript:;" class="count">统计</a>-->
     <!--<a href="javascript:;" class="check">审核</a>-->
