定制任务增加删除编辑模块

--- a/iters-web/src/main/resources/templates/page/work_tail.html
+++ b/iters-web/src/main/resources/templates/page/work_tail.html
@@ -28,8 +28,8 @@
                     <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" id="title" name ="name" minlength="2"  required></td>
                 </tr>
                 <tr>
-                    <td>编号：<i class="i_start"></i></td>
-                    <td  style="text-align: left"><input type="text" id="no"  name ="name" minlength="2"  required></td>
+                    <td>序列号：<i class="i_start"></i></td>
+                    <td  style="text-align: left"><input type="text" id="no"  name ="name" minlength="2" readonly="readonly"  required></td>
                     <td>发布人：</td>
                     <td colspan = "3" style="text-align: left"><input type="text" id="publisher" class="long_text"></td>
                 </tr>
