--- a/iters-web/src/main/resources/templates/page/recode_tail.html
+++ b/iters-web/src/main/resources/templates/page/recode_tail.html
@@ -1,13 +1,13 @@
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>任务详情</title>
-    <link href="css/tail.css" rel="stylesheet" type="text/css" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <title>工作详情</title>
+    <link href="statics/assets/css/tail.css" rel="stylesheet" type="text/css" />
+    <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="statics/assets/css/common.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="statics/assets/js/jquery.js"></script>
+    <link href="statics/plugins/ztree/css/zTreeStyle/zTreeStyle.css" rel="stylesheet" type="text/css" />
     <script>
         function change() {
             var height01 = $(window).height();
@@ -17,153 +17,243 @@
 </head>
 
 <body style="border-radius: 8px" onload="change()">
-<!--<div class="title"><h2>通知详情</h2></div>-->
-<form id="form_demo" >
 <div class="top">
     <div>
+        <input type="text" style="display: none" id="userId">
         <div class="top_out">
             <table class="table" >
                 <tbody>
                 <tr>
-                    <td style="border-top: none" >编号：<i class="i_start"></i></td>
-                    <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text"  name ="name" minlength="2"  required id="no"></td>
+                    <td style="border-top: none">定制任务标题：<i class="i_start"></i></td>
+                    <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" id="recodeTitle" name ="name" minlength="2"  required></td>
                 </tr>
                 <tr>
-                    <td style="border-top: none" >任务标题：<i class="i_start"></i></td>
-                    <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text"  name ="name" minlength="2"  required id="recodeTit"></td>
-                </tr>
-                <tr>
-                    <td>审批状态：</td>
-                    <td  style="text-align: left"><select>
-                        <option>未审核</option>
-                    </select></td>
+                    <td>序列号：<i class="i_start"></i></td>
+                    <td  style="text-align: left"><input type="text" id="no"  name ="name" minlength="2" readonly="readonly"  required></td>
                     <td>发布人：</td>
-                    <td colspan = "3" style="text-align: left"><input type="text" class="long_text" id="person"></td>
+                    <td colspan = "3" style="text-align: left"><input type="text" id="publisher" class="long_text"></td>
                 </tr>
                 <tr>
                     <td>执行时间：</td>
-                    <td  style="text-align: left"><input type="text" id="demo"></td>
+                    <td  style="text-align: left"><input type="text" autocomplete="off" id="performTime"  ></td>
                     <td>执行人：</td>
-                    <td colspan = "3" style="text-align: left"><input type="text" class="long_text" id="playPeron"></td>
+                    <td colspan = "3" style="text-align: left"><input type="text" id="performBy" class="long_text"></td>
                 </tr>
                 <tr>
-                    <td style="line-height: 240px">发布内容：</td>
-                    <td colspan = "8" style="text-align: left"><textarea  id="note" style="width: 100%;height: 240px"></textarea></td>
+                    <td style="line-height: 340px">发布内容：</td>
+                    <td colspan = "8" style="text-align: left"><textarea  id="editor" style="width: 100%;height: 240px"></textarea></td>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
     <div class="bot_btn">
-        <input class="btn" type="submit" value="保存" onclick="RecodeSave()"/>
-        <button class="btn btn1"><a href="notice.html" target="right">返回</a></button>
+        <input type="button" class="btn" id="editButton" onclick="button()" value="保存">
+        <button class="btn btn1"><a href="work" target="right">返回</a></button>
+    </div>
+    <div class="l-modal-bg" id="l-modal-bg"></div>
+    <div class="l-modal" id="stu-user">
+        <div class="l-modal-query" style="width:800px;">
+            <div class="l-modal-close"></div>
+            <div class="l-modal-title"></div>
+            <div class="l-modal-content">
+                <div style="width: 60%;float: left">
+                    <ul  id="userZTree" class="ztree"></ul>
+                    <div class="l-modal-btns">
+                        <button class="l-modal-sure l-modal-btn" id="addUserCheck">确认</button>
+                        <button class="l-modal-cancel l-modal-btn">取消</button>
+                    </div>
+                    <div class="h40"></div>
+                </div>
+                <div style="width: 38%;float: right" id="userList">
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
-</form>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="statics/libs/jquery.min.js"></script>
+<script type="text/javascript" src="statics/plugins/ztree/jquery.ztree.all.min.js"></script>
+<script src="statics/assets/js/utf8-php/ueditor.config.js"></script>
+<script src="statics/assets/js/utf8-php/ueditor.all.min.js"></script>
+<script src="statics/assets/js/date/js/laydate.js"></script>
+<script type="text/javascript" src="statics/assets/js/commom.js"></script>
 <script >
-    $.validator.setDefaults({
-        submitHandler: function() {
-            alert("修改成功");
-        }
-    });
-    $().ready(function() {
-        $("#form_demo").validate();
-    });
-</script>
-<script src="js/date/js/laydate.js"></script>
-<script>
-    var PROJECTID, TASKTYPE, TASKPHASE,  PERSONID
-    !function () {
-        laydate.skin('danlan');//切换皮肤，请查看skins下面皮肤库
-        laydate({ elem: '#demo' });//绑定元素
-        laydate({ elem: '#demo1' });
-        laydate({ elem: '#demo2' });//绑定元素
-    }();
-    function init() {
-        if (parent.getCurrentID() != "") {
-            $.ajax({
-                url: '../TaskRecord/SearchTaskById?taskId=' + parent.getCurrentID(),
-                type: 'POST',
-                dataType: 'json',
-                success: function (result) {
-                    var data = result.data;
-                    if (data) {
-                        PROJECTID = data.PROJECTID
-                        PERSONID =data.PERSONID
-                        TASKPHASE = data.TASKPHASE;
-                        TASKTYPE = data.TASKTYPE;
-                        $("#tit").val(data.PROJECTNAME);
-                        $("#person").val(data.TASKPHASENAME);
-
-
-                        $("#demo").val(getFormatTime(data.STARTTIME.substring(6,19)));
-
-
-                        $("#NOTE").val(data.NOTE);
-
-
-
-                    }
-                    else {
-                        alert("获取失败！");
-                    }
-                },
-                error: function (err) {
-                }
-            })
-
-        }
-
+    var ue = UE.getEditor('editor');
+    function isFocus(e){
+        alert(UE.getEditor('editor').isFocus());
+        UE.dom.domUtils.preventDefault(e)
     }
-    function RecodeSave() {
+    function setblur(e){
+        UE.getEditor('editor').blur();
+        UE.dom.domUtils.preventDefault(e)
+    }
+    function insertHtml() {
+        var value = prompt('????html????', '');
+        UE.getEditor('editor').execCommand('insertHtml', value)
+    }
+    function createEditor() {
+        enableBtn();
+        UE.getEditor('editor');
+    }
+    function getAllHtml() {
+        alert(UE.getEditor('editor').getAllHtml())
+    }
+    function getContent() {
+        var arr = [];
+        arr.push("");
+        arr.push("");
+        arr.push(UE.getEditor('editor').getContent());
+        alert(arr.join("\n"));
+    }
+    function getPlainTxt() {
+        var arr = [];
+        arr.push("");
+        arr.push("");
+        arr.push(UE.getEditor('editor').getPlainTxt());
+        alert(arr.join('\n'))
+    }
+    function setContent(isAppendTo) {
+        var arr = [];
+        arr.push("");
+        UE.getEditor('editor').setContent('??????ueditor', isAppendTo);
+        alert(arr.join("\n"));
+    }
+    function setDisabled() {
+        UE.getEditor('editor').setDisabled('fullscreen');
+        disableBtn("enable");
+    }
+
+    function setEnabled() {
+        UE.getEditor('editor').setEnabled();
+        enableBtn();
+    }
+
+    function getText() {
+
+        var range = UE.getEditor('editor').selection.getRange();
+        range.select();
+        var txt = UE.getEditor('editor').selection.getText();
+        alert(txt)
+    }
+
+    function getContentTxt() {
+        var arr = [];
+        arr.push("");
+        arr.push("");
+        arr.push(UE.getEditor('editor').getContentTxt());
+        alert(arr.join("\n"));
+    }
+    function hasContent() {
+        var arr = [];
+        arr.push("");
+        arr.push("");
+        arr.push(UE.getEditor('editor').hasContents());
+        alert(arr.join("\n"));
+    }
+    function setFocus() {
+        UE.getEditor('editor').focus();
+    }
+    function deleteEditor() {
+        disableBtn();
+        UE.getEditor('editor').destroy();
+    }
+    function disableBtn(str) {
+        var div = document.getElementById('btns');
+        var btns = UE.dom.domUtils.getElementsByTagName(div, "button");
+        for (var i = 0, btn; btn = btns[i++];) {
+            if (btn.id == str) {
+                UE.dom.domUtils.removeAttributes(btn, ["disabled"]);
+            } else {
+                btn.setAttribute("disabled", "true");
+            }
+        }
+    }
+    function enableBtn() {
+        var div = document.getElementById('btns');
+        var btns = UE.dom.domUtils.getElementsByTagName(div, "button");
+        for (var i = 0, btn; btn = btns[i++];) {
+            UE.dom.domUtils.removeAttributes(btn, ["disabled"]);
+        }
+    }
+
+    function getLocalData () {
+        alert(UE.getEditor('editor').execCommand( "getlocaldata" ));
+    }
+
+    function clearLocalData () {
+        UE.getEditor('editor').execCommand( "clearlocaldata" );
+        alert("")
+    }
+</script>
+<script >
+    !function(){
+        laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
+        laydate({elem: '#performTime',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
+    }();
+
+    /*定制任务模块添加jquery逻辑代码*/
+    function button() {
+        var id = $('#no').val()
+        var title = $('#recodeTitle').val();
+        var publisher = $('#publisher').attr("data-id");
+        var performTime = $('#performTime').val();
+        var performBy = $('#performBy').attr("data-id");
+        var content = UE.getEditor('editor').getContent();
+        var data = {
+            title:title,publisher:publisher,content:content,performTime:performTime,performBy:performBy
+        }
+
+        if (!!id) {
+            data = {
+                id:id,title:title,publisher:publisher,content:content,performTime:performTime,performBy:performBy
+            }
+        }
         $.ajax({
             type: "POST",
-            url: "../TaskRecord/UpdateTask",
-            data: {
-                TASKID: parent.getCurrentID(),
-                PROJECTID: PROJECTID,
-                STATE: $("#tit").val(),
-                STARTTIME: $("#demo").val(),
-
-                PERSONID: PERSONID,
-                NOTE: $("#NOTE").val(),
-                TASKTYPE: $("#part").val(),
-                TASKPHASE: $("#person").val(),
-
-            },
+            url: "recode/create",
+            data: data,
             dataType: "json",
             success: function (result) {
-                if (result.data) {
-                    alert("保存成功！！！");
-                    parent.getRecodeTableData();
-                    TaskCancel();
+                if (result.code == 100) {
+                    location.href = parent.location.href = 'recode';
                 } else {
-                    alert("保存失败！！！")
+                    console.log(result.message);
                 }
             }
-        })
+        });
     }
-    function TaskCancel() {
-        var index = parent.layer.getFrameIndex(window.name)
-        parent.layer.close(index);
+    var id = window.parent.document.getElementById("id").value;
+    if (!!id) {
+        $.ajax({
+            type: "GET",
+            url: "recode/query/" + id,
+            dataType: "json",
+            success: function (result) {
+                if (result.code == 100) {
+                    $('#recodeTitle').val(result.data.title);
+                    // $('#publisher').val(result.data.publisher);
+
+                    $('#publisher').val(result.data.publishName);
+                    $('#publisher').attr("data-id",result.data.publisher);
+
+                    $('#no').val(result.data.id);
+                    // $('#performBy').val(result.data.performBy);
+                    $('#performBy').val(result.data.performByName);
+                    $('#performBy').attr("data-id",result.data.performBy);
+
+                    $('#performTime').val(result.data.performTime);
+                    UE.getEditor('editor').addListener("ready", function () {
+                        //赋值
+                        UE.getEditor('editor').setContent(result.data.content);
+                    })
+                } else {
+                    console.log(result.message);
+                }
+            }
+        });
     }
 
-
-
-    //时间格式化函数
-    function getFormatTime(time) {
-        var time = new Date(parseInt(time));
-        var y = time.getFullYear();
-        var m = time.getMonth() + 1;
-        var d = time.getDate();
-        var h = time.getHours();
-        var mm = time.getMinutes();
-        var s = time.getSeconds();
-        return y + '-' + add0(m) + '-' + add0(d) + ' ' + add0(h) + ':' + add0(mm) + ':' + add0(s);
-    }
-    function add0(m) { return m < 10 ? '0' + m : m }
 </script>
-
 </html>
