--- a/iters-web/src/main/resources/templates/page/recode_tail.html
+++ b/iters-web/src/main/resources/templates/page/recode_tail.html
@@ -24,7 +24,7 @@
             <table class="table" >
                 <tbody>
                 <tr>
-                    <td style="border-top: none">定制任务标题：<i class="i_start"></i></td>
+                    <td style="border-top: none">任务标题：<i class="i_start"></i></td>
                     <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" id="recodeTitle" name ="name" minlength="2"  required></td>
                 </tr>
                 <tr>
@@ -40,7 +40,7 @@
                     <td colspan = "3" style="text-align: left"><input type="text" id="performBy" class="long_text"></td>
                 </tr>
                 <tr>
-                    <td style="line-height: 340px">发布内容：</td>
+                    <td style="line-height: 340px">任务内容：</td>
                     <td colspan = "8" style="text-align: left"><textarea  id="editor" style="width: 100%;height: 240px"></textarea></td>
                 </tr>
                 </tbody>
