--- a/iters-web/src/main/resources/templates/page/myrecode.html
+++ b/iters-web/src/main/resources/templates/page/myrecode.html
@@ -20,17 +20,17 @@
 <div class="title"><h2>我的任务</h2></div>
 <div class="query">
     <div class="tabe_bot">
-        <div class="l_left"><label>任务名称：</label><input type="text" placeholder="请输入编号"></div>
-        <div class="l_left"><label>发布人：</label><input type="text" placeholder="请输入姓名"></div>
-        <div class="l_left"><label>发布时间：</label><input id="demo" placeholder="输入年月" /></div>
+        <div class="l_left"><label>任务名称：</label><input type="text" placeholder="请输入任务名称" id="tit"></div>
+        <div class="l_left"><label>发布人：</label><input type="text" placeholder="请输入发布人姓名" id="person"></div>
+        <div class="l_left"><label>发布时间：</label><input id="demo" placeholder="请输入发布时间" /></div>
         <button class="tabe_btn " onclick="getRecodeTableData()">查询</button>
         <div class="clear"></div>
     </div>
 </div>
 <div class="table-operate ue-clear">
-    <!--<a href="#" class="add"  onclick="openlayer()">添加</a>-->
+    <a href="#" class="add"  onclick="openlayer()">添加</a>
     <!--<a href="javascript:;" class="del">删除</a>-->
-    <a href="javascript:;" class="out" onclick="outRecode()">导出</a>
+    <!--<a href="javascript:;" class="out" onclick="outRecode()">导出</a>-->
     <!--<a href="javascript:;" class="count">统计</a>-->
     <!--<a href="javascript:;" class="check">审核</a>-->
 </div>
@@ -39,8 +39,7 @@
 </div>
 <div class="pagination ue-clear"></div>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
-
+<script type="text/javascript" src="statics/assets/js/jquery.js"></script>
 <script src="statics/assets/js/bootstrap.min.js"></script>
 <script src="statics/assets/js/bootstrap-table.js"></script>
 <script src="statics/assets/js/bootstrap-table-zh-CN.min.js"></script>
