--- a/iters-web/src/main/resources/templates/page/recode.html
+++ b/iters-web/src/main/resources/templates/page/recode.html
@@ -21,9 +21,9 @@
 <div class="query">
     <input type="text" id="id" style="display: none" value>
     <div class="tabe_bot">
-        <div class="l_left"><label>任务名称：</label><input type="text" placeholder="请输入名称" id="name"></div>
-        <div class="l_left"><label>发布人：</label><input type="text" placeholder="请输入姓名" id="person"></div>
-        <div class="l_left"><label>发布时间：</label><input id="demo" placeholder="输入年月" /></div>
+        <div class="l_left"><label>任务名称：</label><input type="text" placeholder="请输入任务名称" id="name"></div>
+        <div class="l_left"><label>发布人：</label><input type="text" placeholder="请输入发布人姓名" id="person"></div>
+        <div class="l_left"><label>发布时间：</label><input id="demo" placeholder="请输入发布时间" /></div>
         <button class="tabe_btn " onclick="getRecodeTableData()">查询</button>
         <div class="clear"></div>
     </div>
@@ -31,7 +31,8 @@
 <div class="table-operate ue-clear">
     <a href="#" class="add"  onclick="addRecode()">添加</a>
     <!--<a href="javascript:;" class="del" onclick="delRecode()">删除</a>-->
-    <a href="javascript:;" class="count">统计</a>
+    <a href="javascript:;" class="out" onclick="outRecodeWork()">导出</a>
+    <a href="locationRecodeStatic" class="count"  onclick="StaticRecodeFun()">统计</a>
     <a href="javascript:;" class="check">审核</a>
 </div>
 <div class="table-box">
@@ -55,5 +56,10 @@
     }();
 </script>
 <script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
+<script>
+    function StaticRecodeFun(){
+        alert("统计成功")
+    }
+</script>
 
 </html>
