--- a/iters-web/src/main/resources/templates/page/work.html
+++ b/iters-web/src/main/resources/templates/page/work.html
@@ -20,9 +20,9 @@
 <div class="query">
     <input type="text" id="id" style="display: none" value>
     <div class="tabe_bot">
-        <div class="l_left"><label>日志标题：</label><input type="text" placeholder="请输入标题" id="tit"></div>
-        <div class="l_left"><label>发布人：</label><input type="text" placeholder="请输入姓名" id="person"></div>
-        <div class="l_left"><label>发布时间：</label><input id="demo" placeholder="输入年月" /></div>
+        <div class="l_left"><label>日志标题：</label><input type="text" placeholder="请输入日志标题" id="tit"></div>
+        <div class="l_left"><label>发布人：</label><input type="text" placeholder="请输入发布人姓名" id="person"></div>
+        <div class="l_left"><label>发布时间：</label><input id="demo" placeholder="请输入发布时间" /></div>
         <button class="tabe_btn " onclick=" getWorkTableData();">查询</button>
         <div class="clear"></div>
     </div>
