邮箱查询详情模块已完善

--- a/iters-web/src/main/resources/templates/page/dossier_my.html
+++ b/iters-web/src/main/resources/templates/page/dossier_my.html
@@ -107,7 +107,7 @@
             $("#pup01").hide();
         })
     })
-    function addPersonalFile() {
+    function addPersonalFile() {debugger;
         var name = $('#name').val();
         var formdata = new FormData();
         formdata.append("file", $('#file')[0].files[0]);
