--- a/iters-web/src/main/resources/templates/page/dossier_puplic.html
+++ b/iters-web/src/main/resources/templates/page/dossier_puplic.html
@@ -138,8 +138,9 @@
 
         })
     })
-    function addPersonalFile() {
+    function addPersonalFile() {debugger;
         console.log("sss")
+        alert("1111")
         var name = $('#name').val();
         var formdata = new FormData();
         formdata.append("file", $('#file')[0].files[0]);
