--- a/iters-web/src/main/resources/templates/page/email.html
+++ b/iters-web/src/main/resources/templates/page/email.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap-table.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/info-mgt.css" />
+    <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="statics/assets/css/bootstrap-table.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="statics/assets/css/base.css" />
+    <link rel="stylesheet" href="statics/assets/css/info-mgt.css" />
     <style>
-        .layui-layer-title{background:url(images/righttitlebig.png) repeat-x;font-weight:bold;color:#46647e; border:1px solid #c1d3de;height: 33px;line-height: 33px;}
+        .layui-layer-title{background:url(statics/assets/images/righttitlebig.png) repeat-x;font-weight:bold;color:#46647e; border:1px solid #c1d3de;height: 33px;line-height: 33px;}
         .tabe_bot label{width: 70px;text-align: right;font-size: 14px;font-weight: 900;color: #46647e}
         .l_left{float: left;margin-left: 2px;}
         .tabe_bot input,.tabe_bot  select{width: 180px;height: 30px;border-radius: 6px;margin:0 20px 0 0;border: none;border: 1px #ccc solid}
@@ -16,7 +16,9 @@
     <title>邮件管理</title>
 </head>
 
-<body><div class="emal_left">
+<body onload="InboxInf()">
+<div class="emal_left">
+    <input type="text" id="id" style="display: none" value>
     <div class="email_top">
        <a href="#" class="a_border"><i class="get_i"></i> 收信</a>
         <a href="#" onclick="openlayer()"><i class="write_i"></i>写信</a>
@@ -33,21 +35,17 @@
 <div class="title"><h2>收件箱</h2></div>
 <div class="query">
     <div class="tabe_bot">
-        <div class="l_left"><label>邮件名称：</label><input type="text" placeholder="请输入邮件名称"></div>
-        <div class="l_left"><label>是否查看：</label><select>
-            <option>查看</option>
-            <option>未查看</option>
-        </select></div>
-        <div class="l_left"><label>时间：</label><input id="demo" placeholder="输入提交时间" /></div>
-        <button class="tabe_btn ">查询</button>
+        <div class="l_left"><label>邮件标题：</label><input type="text" id="emailTitles" placeholder="请输入邮件标题"></div>
+        <div class="l_left"><label>是否查看：</label><input id="isMsgs" placeholder="请输入是或者否" /></div>
+        <div class="l_left"><label>发送时间：</label><input id="sendTimes" placeholder="请输入发送时间" /></div>
+        <button class="tabe_btn " onclick="getEmailTableData()">查询</button>
         <div class="clear"></div>
     </div>
 </div>
 <div class="table-operate ue-clear">
     <a href="#" class="sent01"  onclick="openlayer()">转发</a>
-    <a href="javascript:;" class="del">删除</a>
+   <!-- <a href="javascript:;" class="del">删除</a>-->
     <a href="javascript:;" class="back">回复</a>
-
     <a href="javascript:;" class="out">导出</a>
 </div>
 <div class="table-box">
@@ -59,12 +57,12 @@
         <div class="title"><h2>草稿箱</h2></div>
         <div class="query">
             <div class="tabe_bot">
-                <div class="l_left"><label>邮件名称：</label><input type="text" placeholder="请输入邮件名称"></div>
+                <div class="l_left"><label>邮件标题：</label><input type="text" placeholder="请输入邮件名称"></div>
                 <div class="l_left"><label>是否查看：</label><select>
                     <option>查看</option>
                     <option>未查看</option>
                 </select></div>
-                <div class="l_left"><label>时间：</label><input id="demo01" placeholder="输入提交时间" /></div>
+                <div class="l_left"><label>发送时间：</label><input id="demo01" placeholder="输入提交时间" /></div>
                 <button class="tabe_btn ">查询</button>
                 <div class="clear"></div>
             </div>
@@ -85,12 +83,12 @@
         <div class="title"><h2>已发送</h2></div>
         <div class="query">
             <div class="tabe_bot">
-                <div class="l_left"><label>邮件名称：</label><input type="text" placeholder="请输入邮件名称"></div>
+                <div class="l_left"><label>邮件标题：</label><input type="text" placeholder="请输入邮件名称"></div>
                 <div class="l_left"><label>是否查看：</label><select>
                     <option>查看</option>
                     <option>未查看</option>
                 </select></div>
-                <div class="l_left"><label>时间：</label><input id="demo02" placeholder="输入提交时间" /></div>
+                <div class="l_left"><label>发送时间：</label><input id="demo02" placeholder="输入提交时间" /></div>
                 <button class="tabe_btn ">查询</button>
                 <div class="clear"></div>
             </div>
@@ -111,13 +109,13 @@
         <div class="title"><h2>回收站</h2></div>
         <div class="query">
             <div class="tabe_bot">
-                <div class="l_left"><label>邮件名称：</label><input type="text" placeholder="请输入邮件名称"></div>
+                <div class="l_left"><label>邮件标题：</label><input type="text" placeholder="请输入邮件名称"></div>
                 <div class="l_left"><label>是否查看：</label><select>
                     <option>查看</option>
                     <option>未查看</option>
                 </select></div>
-                <div class="l_left"><label>时间：</label><input id="demo03" placeholder="输入提交时间" /></div>
-                <button class="tabe_btn ">查询</button>
+                <div class="l_left"><label>发送时间：</label><input id="demo03" placeholder="输入提交时间" /></div>
+                <button class="tabe_btn">查询</button>
                 <div class="clear"></div>
             </div>
         </div>
@@ -125,7 +123,6 @@
             <a href="#" class="sent01"  onclick="openlayer()">还原</a>
             <a href="javascript:;" class="del">删除</a>
             <!--<a href="javascript:;" class="back">回息</a>-->
-
             <a href="javascript:;" class="out">导出</a>
         </div>
         <div class="table-box">
@@ -135,67 +132,138 @@
     </div>
 </div>
 </body>
-<script type="text/javascript" src="js/jquery.js"></script>
-
-<script src="js/bootstrap.min.js"></script>
-<script src="js/bootstrap-table.js"></script>
-<script src="js/bootstrap-table-zh-CN.min.js"></script>
-<script src="js/date/js/laydate.js"></script>
+<script type="text/javascript" src="statics/assets/js/jquery.js"></script>
+<script src="statics/assets/js/bootstrap.min.js"></script>
+<script src="statics/assets/js/bootstrap-table.js"></script>
+<script src="statics/assets/js/bootstrap-table-zh-CN.min.js"></script>
+<script src="statics/assets/js/date/js/laydate.js"></script>
 <script>
+    /*收件箱查询的内容*/
+    var emailTitles, isMsgs, currentID, sendTimes, flag = true;
+    var $dataTableHot;
+    function delEmail(id) {debugger;
+        $.ajax({
+            type: "GET",
+            url: "email/deleteEmail/"+id,
+            dataType: "json",
+            success: function(result) {
+                if (result.code == 100) {
+                    alert("删除成功！")
+                    $dataTableHot.bootstrapTable('refresh');
+                } else {bootstrapTable
+                    console.log(result.message);
+                }
+            }
+        });
+
+    }
+
+    function InboxInf(){
     $(function () {
-        $('#table').bootstrapTable({
-            method: "get",
+        $dataTableHot = $('#table').bootstrapTable({
+            method : 'get',
+            url : "email/emailInboxPage",//请求路径
             striped: true,
             singleSelect: false,
-            url: "json/datum.json",
             dataType: "json",
             pagination: true, //分页
             pageSize: 10,
             pageNumber: 1,
             search: false, //显示搜索框
-            contentType: "application/x-www-form-urlencoded",
-            queryParams: null,
+            sidePagination:"server",
+            contentType: "application/x-www-form-urlencoded",//一种编码。好像在post请求的时候需要用到。这里用的get请求，注释掉这句话也能拿到数据
+            queryParams : function(params) {
+                var temp = {//如果是在服务器端实现分页，limit、offset这两个参数是必须的
+                    limit : params.limit, // 每页显示数量
+                    offset : (params.offset / params.limit) + 1, // SQL语句起始索引
+                    //page : (params.offset / params.limit) + 1, //当前页码
+                    emailTitle : emailTitles = $("#emailTitles").val(),
+                    isMsgs : isMsgs = $("#isMsgs").val(),
+                    sendTime : sendTimes = $("#sendTimes").val(),
+                };
+                return temp;
+            },
+            responseHandler: function (res) {
+                console.log(res.data.total);
+                console.log(res.data.records);
+                return {
+                    total : res.data.total,
+                    rows : res.data.records
+                };
+            },
             columns: [
                 {
                     checkbox:"true",
-                    field: 'ID',
-                    align: 'center',
-                    valign: 'middle'
                 },
                 {
-                    title: '标示',
-                    field: 'id',
+                    title: '邮件标示',
+                    field: 'imageId',
                     align: 'center',
-                    formatter: function (value, row) {
-                        var e = '<a  href="#"><img src="images/topmail.png"/> </a> ';
-
+                    formatter: function () {
+                        var e = '<a  href="write_email"><img onclick="onclickImgFun()"  src="statics/assets/images/topmail.png"/> </a> ';
                         return e;
                     }
+
                 },
+
                 {
-                    title: "发件人",
-                    field: 'class',
+                    title: "发件人邮箱",
+                    field: 'sender',
                     align: 'center',
                     valign: 'middle'
                 },
                 {
-                    title: '主题',
-                    field: 'sex',
+                    title: "发件人姓名",
+                    field: 'senderName',
                     align: 'center',
                     valign: 'middle'
                 },
+                {
+                    title: "收件人邮箱",
+                    field: 'recipients',
+                    align: 'center',
+                    valign: 'middle'
+                },
+                {
+                    title: '邮件标题',
+                    field: 'emailTitle',
+                    align: 'center',
+                    valign: 'middle'
+                },
+                {
+                    title: '是否已查看',
+                    field: 'isMsgs',
+                    align: 'center',
+                    valign: 'middle'
+                },
+
                 {
                     title: '发送时间',
-                    field: 'type',
+                    field: 'sendTime',
                     align: 'center'
+                },
+                {
+                    title: '操作',
+                    align: 'center',
+                    formatter: function (value, row) {
+                        console.log("row="+row.id);
+                        var e = '<button button="#" mce_href="#" onclick="delEmail(\'' + row.id + '\')">删除</button>' +
+                            '<button button="#" mce_href="#" onclick="openlayer(\'' + row.id + '\')">详情</button> '
+                        return e;
+                    }
                 }
 
 
             ]
+
         });
     });
+  }
+    function getEmailTableData(){debugger;
+        $dataTableHot.bootstrapTable('refresh');
+    }
 </script>
-<script src="js/date/js/laydate.js"></script>
+<script src="statics/assets/js/date/js/laydate.js"></script>
 <script>
     $(function () {
         $('#table01').bootstrapTable({
@@ -218,11 +286,11 @@
                     valign: 'middle'
                 },
                 {
-                    title: '标示',
+                    title: '邮件标示',
                     field: 'id',
                     align: 'center',
                     formatter: function (value, row) {
-                        var e = '<a  href="#"><img src="images/topmail.png"/> </a> ';
+                        var e = '<a  href="#"><img src="statics/assets/images/topmail.png"/> </a> ';
 
                         return e;
                     }
@@ -234,7 +302,7 @@
                     valign: 'middle'
                 },
                 {
-                    title: '主题',
+                    title: '邮件标题',
                     field: 'sex',
                     align: 'center',
                     valign: 'middle'
@@ -272,11 +340,11 @@
                     valign: 'middle'
                 },
                 {
-                    title: '标示',
+                    title: '邮件标示',
                     field: 'id',
                     align: 'center',
                     formatter: function (value, row) {
-                        var e = '<a  href="#"><img src="images/topmail.png"/> </a> ';
+                        var e = '<a  href="#"><img src="statics/assets/images/topmail.png"/> </a> ';
 
                         return e;
                     }
@@ -288,7 +356,7 @@
                     valign: 'middle'
                 },
                 {
-                    title: '主题',
+                    title: '邮件标题',
                     field: 'sex',
                     align: 'center',
                     valign: 'middle'
@@ -326,11 +394,11 @@
                     valign: 'middle'
                 },
                 {
-                    title: '标示',
+                    title: '邮件标示',
                     field: 'id',
                     align: 'center',
                     formatter: function (value, row) {
-                        var e = '<a  href="#"><img src="images/topmail.png"/> </a> ';
+                        var e = '<a  href="#"><img src="statics/assets/images/topmail.png"/> </a> ';
 
                         return e;
                     }
@@ -342,7 +410,7 @@
                     valign: 'middle'
                 },
                 {
-                    title: '主题',
+                    title: '邮件标题',
                     field: 'sex',
                     align: 'center',
                     valign: 'middle'
@@ -361,19 +429,17 @@
 <script>
     !function(){
         laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
-        laydate({elem: '#demo'});//绑定元素
-        laydate({elem: '#demo01'});//绑定元素
-        laydate({elem: '#demo02'});//绑定元素
-        laydate({elem: '#demo03'});//绑定元素
+        laydate({elem: '#sendTimes',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
     }();
 </script>
-<script src="js/layer_v2.1/layer/layer.js"></script>
+<script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
 <script type="text/javascript">
 
     function openlayer(id){
+        $('#id').val(id);
         layer.open({
             type: 2,
-            title: '写邮件',
+            title: '书写邮件',
             shadeClose: true,
             shade: 0.5,
             skin: 'layui-layer-rim',
@@ -382,7 +448,7 @@
             area: ['98%', '98%'],
             shadeClose: true,
             closeBtn: 1,
-            content: 'write_email.html'
+            content: 'write_email'
             //iframe的url
         });
     }
