--- a/iters-web/src/main/resources/templates/page/index.html
+++ b/iters-web/src/main/resources/templates/page/index.html
@@ -54,9 +54,7 @@
 
                         </ul>
                     </li>
-
-
-                    <li class="email"><div class="nav-header"><a href="mesage"class="ue-clear"  target="right"><span>消息推送</span><i class="icon"></i></a></div></li>
+                    <li class="email"><div class="nav-header"><a href="email"class="ue-clear"  target="right"><span>邮箱管理</span><i class="icon"></i></a></div></li>
                     <li class="list_m"><div class="nav-header"><a href="mailList" class="ue-clear" target="right"><span>通讯录管理</span><i class="icon"></i></a></div></li>
                     <li class="news_m"><div class="nav-header"><a href="notice" class="ue-clear"  target="right"><span>通知通告</span><i class="icon"></i></a></div></li>
 
@@ -75,7 +73,6 @@
                         <ul class="subnav">
                             <li><a href="person" target="right">用户管理</a></li>
                             <li><a href="part" target="right">部门管理</a></li>
-
                             <li><a href="role" target="right">角色管理</a></li>
 
                         </ul>
