--- a/iters-web/src/main/resources/templates/page/email.html
+++ b/iters-web/src/main/resources/templates/page/email.html
@@ -20,39 +20,39 @@
 <div class="emal_left">
     <input type="text" id="id" style="display: none" value>
     <div class="email_top">
-       <a href="#" class="a_border"><i class="get_i"></i> 收信</a>
+        <a href="#" class="a_border"><i class="get_i"></i> 收信</a>
         <a href="#" onclick="openlayer()"><i class="write_i"></i>写信</a>
     </div>
     <ul class="email_ul">
-        <li class="li_active">收件箱<span>12</span></li>
+        <li class="li_active">收件箱(<b id="inBoxSum"></b>)<span id="inBoxCount"></span></li>
         <li>草稿箱<span>12</span></li>
         <li>已发送<span>12</span></li>
         <li>回收站<span>12</span></li>
     </ul>
 </div>
 <div class="emal_right">
-<div  class="email_con" style="display: block">
-<div class="title"><h2>收件箱</h2></div>
-<div class="query">
-    <div class="tabe_bot">
-        <div class="l_left"><label>邮件标题：</label><input type="text" id="emailTitles" placeholder="请输入邮件标题"></div>
-        <div class="l_left"><label>是否查看：</label><input id="isMsgs" placeholder="请输入是或者否" /></div>
-        <div class="l_left"><label>发送时间：</label><input id="sendTimes" placeholder="请输入发送时间" /></div>
-        <button class="tabe_btn " onclick="getEmailTableData()">查询</button>
-        <div class="clear"></div>
+    <div  class="email_con" style="display: block">
+        <div class="title"><h2>收件箱</h2></div>
+        <div class="query">
+            <div class="tabe_bot">
+                <div class="l_left"><label>邮件标题：</label><input type="text" id="emailTitles" placeholder="请输入邮件标题"></div>
+                <div class="l_left"><label>是否查看：</label><input id="isMsgs" placeholder="请输入是或者否" /></div>
+                <div class="l_left"><label>发送时间：</label><input id="sendTimes" placeholder="请输入发送时间" /></div>
+                <button class="tabe_btn " onclick="getEmailTableData()">查询</button>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div class="table-operate ue-clear">
+            <!--<a href="#" class="sent01"  onclick="openlayerEquery(id)">转发</a>
+           &lt;!&ndash; <a href="javascript:;" class="del">删除</a>&ndash;&gt;
+            <a href="#" onclick="openlayerEquery(id)" class="back">回复</a>-->
+            <a href="javascript:;" class="out" onclick="exportEmails()">导出</a>
+        </div>
+        <div class="table-box">
+            <table id="table" class="table_style"></table>
+        </div>
+        <div class="pagination ue-clear"></div>
     </div>
-</div>
-<div class="table-operate ue-clear">
-    <a href="#" class="sent01"  onclick="openlayer()">转发</a>
-   <!-- <a href="javascript:;" class="del">删除</a>-->
-    <a href="javascript:;" class="back">回复</a>
-    <a href="javascript:;" class="out">导出</a>
-</div>
-<div class="table-box">
-    <table id="table" class="table_style"></table>
-</div>
-<div class="pagination ue-clear"></div>
-</div>
     <div  class="email_con">
         <div class="title"><h2>草稿箱</h2></div>
         <div class="query">
@@ -137,325 +137,29 @@
 <script src="statics/assets/js/bootstrap-table.js"></script>
 <script src="statics/assets/js/bootstrap-table-zh-CN.min.js"></script>
 <script src="statics/assets/js/date/js/laydate.js"></script>
+<script src="statics/assets/js/date/js/laydate.js"></script>
+<script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
+<script src="statics/assets/js/email.js"></script>
 <script>
-    /*收件箱查询的内容*/
-    var emailTitles, isMsgs, currentID, sendTimes, flag = true;
-    var $dataTableHot;
-    function delEmail(id) {debugger;
+    $(function () {debugger;
         $.ajax({
             type: "GET",
-            url: "email/deleteEmail/"+id,
+            url: "email/emailInBoxSumOrCount/",
             dataType: "json",
-            success: function(result) {
+            success: function (result) {
                 if (result.code == 100) {
-                    alert("删除成功！")
-                    $dataTableHot.bootstrapTable('refresh');
-                } else {bootstrapTable
-                    console.log(result.message);
+                    $.each(result.data, function (index, value) {
+                        if(index==0) {
+                            $('#inBoxSum').html(value);
+                        }
+                        if(index==1) {
+                            $('#inBoxCount').html(value);
+                        }
+                    });
+                }else {
                 }
             }
         });
-
-    }
-
-    function InboxInf(){
-    $(function () {
-        $dataTableHot = $('#table').bootstrapTable({
-            method : 'get',
-            url : "email/emailInboxPage",//请求路径
-            striped: true,
-            singleSelect: false,
-            dataType: "json",
-            pagination: true, //分页
-            pageSize: 10,
-            pageNumber: 1,
-            search: false, //显示搜索框
-            sidePagination:"server",
-            contentType: "application/x-www-form-urlencoded",//一种编码。好像在post请求的时候需要用到。这里用的get请求，注释掉这句话也能拿到数据
-            queryParams : function(params) {
-                var temp = {//如果是在服务器端实现分页，limit、offset这两个参数是必须的
-                    limit : params.limit, // 每页显示数量
-                    offset : (params.offset / params.limit) + 1, // SQL语句起始索引
-                    //page : (params.offset / params.limit) + 1, //当前页码
-                    emailTitle : emailTitles = $("#emailTitles").val(),
-                    isMsgs : isMsgs = $("#isMsgs").val(),
-                    sendTime : sendTimes = $("#sendTimes").val(),
-                };
-                return temp;
-            },
-            responseHandler: function (res) {
-                console.log(res.data.total);
-                console.log(res.data.records);
-                return {
-                    total : res.data.total,
-                    rows : res.data.records
-                };
-            },
-            columns: [
-                {
-                    checkbox:"true",
-                },
-                {
-                    title: '邮件标示',
-                    field: 'imageId',
-                    align: 'center',
-                    formatter: function () {
-                        var e = '<a  href="write_email"><img onclick="onclickImgFun()"  src="statics/assets/images/topmail.png"/> </a> ';
-                        return e;
-                    }
-
-                },
-
-                {
-                    title: "发件人邮箱",
-                    field: 'sender',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: "发件人姓名",
-                    field: 'senderName',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: "收件人邮箱",
-                    field: 'recipients',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '邮件标题',
-                    field: 'emailTitle',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '是否已查看',
-                    field: 'isMsgs',
-                    align: 'center',
-                    valign: 'middle'
-                },
-
-                {
-                    title: '发送时间',
-                    field: 'sendTime',
-                    align: 'center'
-                },
-                {
-                    title: '操作',
-                    align: 'center',
-                    formatter: function (value, row) {
-                        console.log("row="+row.id);
-                        var e = '<button button="#" mce_href="#" onclick="delEmail(\'' + row.id + '\')">删除</button>' +
-                            '<button button="#" mce_href="#" onclick="openlayer(\'' + row.id + '\')">详情</button> '
-                        return e;
-                    }
-                }
-
-
-            ]
-
-        });
-    });
-  }
-    function getEmailTableData(){debugger;
-        $dataTableHot.bootstrapTable('refresh');
-    }
-</script>
-<script src="statics/assets/js/date/js/laydate.js"></script>
-<script>
-    $(function () {
-        $('#table01').bootstrapTable({
-            method: "get",
-            striped: true,
-            singleSelect: false,
-            url: "json/datum.json",
-            dataType: "json",
-            pagination: true, //分页
-            pageSize: 10,
-            pageNumber: 1,
-            search: false, //显示搜索框
-            contentType: "application/x-www-form-urlencoded",
-            queryParams: null,
-            columns: [
-                {
-                    checkbox:"true",
-                    field: 'ID',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '邮件标示',
-                    field: 'id',
-                    align: 'center',
-                    formatter: function (value, row) {
-                        var e = '<a  href="#"><img src="statics/assets/images/topmail.png"/> </a> ';
-
-                        return e;
-                    }
-                },
-                {
-                    title: "发件人",
-                    field: 'class',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '邮件标题',
-                    field: 'sex',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '发送时间',
-                    field: 'type',
-                    align: 'center'
-                }
-
-
-            ]
-        });
-    });
-</script>
-<script>
-    $(function () {
-        $('#table02').bootstrapTable({
-            method: "get",
-            striped: true,
-            singleSelect: false,
-            url: "json/datum.json",
-            dataType: "json",
-            pagination: true, //分页
-            pageSize: 10,
-            pageNumber: 1,
-            search: false, //显示搜索框
-            contentType: "application/x-www-form-urlencoded",
-            queryParams: null,
-            columns: [
-                {
-                    checkbox:"true",
-                    field: 'ID',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '邮件标示',
-                    field: 'id',
-                    align: 'center',
-                    formatter: function (value, row) {
-                        var e = '<a  href="#"><img src="statics/assets/images/topmail.png"/> </a> ';
-
-                        return e;
-                    }
-                },
-                {
-                    title: "发件人",
-                    field: 'class',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '邮件标题',
-                    field: 'sex',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '发送时间',
-                    field: 'type',
-                    align: 'center'
-                }
-
-
-            ]
-        });
-    });
-</script>
-<script>
-    $(function () {
-        $('#table03').bootstrapTable({
-            method: "get",
-            striped: true,
-            singleSelect: false,
-            url: "json/datum.json",
-            dataType: "json",
-            pagination: true, //分页
-            pageSize: 10,
-            pageNumber: 1,
-            search: false, //显示搜索框
-            contentType: "application/x-www-form-urlencoded",
-            queryParams: null,
-            columns: [
-                {
-                    checkbox:"true",
-                    field: 'ID',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '邮件标示',
-                    field: 'id',
-                    align: 'center',
-                    formatter: function (value, row) {
-                        var e = '<a  href="#"><img src="statics/assets/images/topmail.png"/> </a> ';
-
-                        return e;
-                    }
-                },
-                {
-                    title: "发件人",
-                    field: 'class',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '邮件标题',
-                    field: 'sex',
-                    align: 'center',
-                    valign: 'middle'
-                },
-                {
-                    title: '发送时间',
-                    field: 'type',
-                    align: 'center'
-                }
-
-
-            ]
-        });
-    });
-</script>
-<script>
-    !function(){
-        laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
-        laydate({elem: '#sendTimes',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
-    }();
-</script>
-<script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
-<script type="text/javascript">
-
-    function openlayer(id){
-        $('#id').val(id);
-        layer.open({
-            type: 2,
-            title: '书写邮件',
-            shadeClose: true,
-            shade: 0.5,
-            skin: 'layui-layer-rim',
-//            maxmin: true,
-            closeBtn:1,
-            area: ['98%', '98%'],
-            shadeClose: true,
-            closeBtn: 1,
-            content: 'write_email'
-            //iframe的url
-        });
-    }
-</script>
-<script>
-
-    $(function () {
         $(".email_ul li").each(function (index) {
             $(this).on("click",function () {
                 $(".emal_right .email_con").eq(index).fadeIn().siblings("div").stop().hide();
@@ -465,5 +169,11 @@
             })
         })
     })
+</script>
+<script>
+    !function(){
+        laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
+        laydate({elem: '#sendTimes',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
+    }();
 </script>
 </html>
