--- a/iters-web/src/main/resources/templates/page/index.html
+++ b/iters-web/src/main/resources/templates/page/index.html
@@ -1,27 +1,27 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="statics/assets/css/base.css" />
-<link rel="stylesheet" type="text/css" href="statics/assets/css/jquery.dialog.css" />
-<link rel="stylesheet" href="statics/assets/css/index.css" />
-<script src="statics/libs/vue.min.js"></script>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="statics/assets/css/base.css" />
+    <link rel="stylesheet" type="text/css" href="statics/assets/css/jquery.dialog.css" />
+    <link rel="stylesheet" href="statics/assets/css/index.css" />
+    <script src="statics/libs/vue.min.js"></script>
     <style>
         .layui-layer-title{background:url(statics/assets/images/righttitlebig.png) repeat-x;font-weight:bold;color:#46647e; border:1px solid #c1d3de;height: 33px;line-height: 33px;}
     </style>
-<title>OA管理系统</title>
+    <title>OA管理系统</title>
 </head>
 <body>
 <div id="container">
-	<div id="hd">
-    	<div class="hd-wrap ue-clear">
-        	<div class="top-light"></div>
+    <div id="hd">
+        <div class="hd-wrap ue-clear">
+            <div class="top-light"></div>
             <h1 class="logo"></h1>
             <div class="login-info ue-clear">
                 <div class="welcome ue-clear"><span>欢迎您,</span><a href="javascript:void(0)" class="user-name">{{user.userName}}</a></div>
                 <div class="login-msg ue-clear">
                     <a href="javascript:void(0)" class="msg-txt">消息</a>
-                    <a href="javascript:void(0)" class="msg-num">10</a>
+                    <a href="javascript:void(0)" class="msg-num" id="inBoxCount"></a>
                 </div>
             </div>
             <div class="toolbar ue-clear">
@@ -32,11 +32,11 @@
         </div>
     </div>
     <div id="bd">
-    	<div class="wrap ue-clear">
-        	<div class="sidebar">
-            	<h2 class="sidebar-header"><p>功能导航</p></h2>
+        <div class="wrap ue-clear">
+            <div class="sidebar">
+                <h2 class="sidebar-header"><p>功能导航</p></h2>
                 <ul class="nav">
-                	<li class="office current"><div class="nav-header"><a href="home" target="right" class="ue-clear"><span>首页</span><i class="icon"></i></a></div></li>
+                    <li class="office current"><div class="nav-header"><a href="home" target="right" class="ue-clear"><span>首页</span><i class="icon"></i></a></div></li>
                     <li class="land"><div class="nav-header"><a href="JavaScript:;" class="ue-clear" ><span>日常办公</span><i class="icon hasChild"></i></a></div>
                         <ul class="subnav">
                             <li><a href="work" target="right">工作日志</a></li>
@@ -54,7 +54,7 @@
 
                         </ul>
                     </li>
-                    <li class="email"><div class="nav-header"><a href="email"class="ue-clear"  target="right"><span>邮箱管理</span><i class="icon"></i></a></div></li>
+                    <li class="email"><div class="nav-header"><a href="email"class="ue-clear"  target="right"><span onclick="emailSumOrCount()">邮箱管理</span><i class="icon"></i></a></div></li>
                     <li class="list_m"><div class="nav-header"><a href="mailList" class="ue-clear" target="right"><span>通讯录管理</span><i class="icon"></i></a></div></li>
                     <li class="news_m"><div class="nav-header"><a href="notice" class="ue-clear"  target="right"><span>通知通告</span><i class="icon"></i></a></div></li>
 
@@ -80,14 +80,14 @@
                 </ul>
             </div>
             <div class="content">
-            	<iframe src="home" id="iframe" width="100%" height="100%" frameborder="0" name="right" style="min-width: 1100px"></iframe>
+                <iframe src="home" id="iframe" width="100%" height="100%" frameborder="0" name="right" style="min-width: 1100px"></iframe>
             </div>
         </div>
     </div>
     <div id="ft" class="foot_div">
 
-            <span>XINGHUI</span>
-            <em>Office&nbsp;System</em>
+        <span>XINGHUI</span>
+        <em>Office&nbsp;System</em>
 
         <div class="ft-right">
             <span>Automation</span>
@@ -96,18 +96,18 @@
     </div>
 </div>
 <div class="exitDialog">
-	<div class="dialog-content">
-    	<div class="ui-dialog-icon"></div>
+    <div class="dialog-content">
+        <div class="ui-dialog-icon"></div>
         <div class="ui-dialog-text">
-        	<p class="dialog-content">你确定要退出系统？</p>
+            <p class="dialog-content">你确定要退出系统？</p>
             <p class="tips">如果是请点击“确定”，否则点“取消”</p>
-            
+
             <div class="buttons">
                 <input type="button" class="button long2 ok" value="确定" />
                 <input type="button" class="button long2 normal" value="取消" />
             </div>
         </div>
-        
+
     </div>
 </div>
 </body>
@@ -117,7 +117,25 @@
 <script type="text/javascript" src="statics/assets/js/index.js"></script>
 <script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
 <script src="statics/js/index.js"></script>
+<script src="statics/assets/js/email.js"></script>
 <script type="text/javascript">
-
+    $.ajax({
+        type: "GET",
+        url: "email/emailInBoxSumOrCount/",
+        dataType: "json",
+        success: function (result) {
+            if (result.code == 100) {
+                $.each(result.data, function (index, value) {
+                    if(index==0) {
+                        $('#inBoxSum').html(value);
+                    }
+                    if(index==1) {
+                        $('#inBoxCount').html(value);
+                    }
+                });
+            }else {
+            }
+        }
+    });
 </script>
 </html>
