--- a/iters-web/src/main/resources/templates/page/write_replyEmail.html
+++ b/iters-web/src/main/resources/templates/page/write_replyEmail.html
@@ -1,9 +1,8 @@
-
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>写邮件</title>
+    <title>邮件详情</title>
     <link href="statics/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="statics/assets/css/tail.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="statics/assets/js/jquery.js"></script>
@@ -25,25 +24,25 @@
                     <tbody>
                     <tr>
                         <td style="border-top: none">邮件标题：<i class="i_start"></i> </td>
-                        <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" name ="name" id="emailTitles" minlength="2"  required></td>
+                        <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" name ="name" id="emailTitles"   minlength="2"  required></td>
                     </tr>
                     <tr style="display: none">
                         <td style="border-top: none">是否已查看： </td>
-                        <td  style="text-align: left"><input type="text" id="no"  name ="name" minlength="2" readonly="readonly"  required></td>
+                        <td  style="text-align: left"><input type="text" id="no"  name ="name" minlength="2"   required></td>
                         <td  colspan = "6"    style="text-align: left;border-top: none"><input type="text" id="isMsgss"  value="否"  name ="name" minlength="2"  required></td>
                     </tr>
 
                     <tr>
                         <td style="border-top: none">发件人姓名： </td>
-                        <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" name ="name" id="senderNames" minlength="2"  required></td>
+                        <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" name ="name" id="senderNames"   minlength="2"  required></td>
                     </tr>
                     <tr>
                         <td style="border-top: none">发件人邮箱： </td>
-                        <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" name ="name" id="senders" minlength="2"  required></td>
+                        <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" name ="name" id="senders"  minlength="2"  required></td>
                     </tr>
                     <tr>
                         <td style="border-top: none">收件人邮箱：</td>
-                        <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" name ="name" id="recipientss" minlength="2"  required></td>
+                        <td  colspan = "6"  style="text-align: left;border-top: none"><input type="text" name ="name" id="recipientss"  minlength="2"  required></td>
                     </tr>
                     <tr>
                         <td style="border-top: none" id="hideAccessorys">添加附件：</td>
@@ -51,14 +50,13 @@
                     </tr>
                     <tr>
                         <td style="line-height: 340px">邮件内容：</td>
-                        <td colspan = "8" style="text-align: left"><textarea  id="editor" style="width: 100%;height: 240px"></textarea></td>
+                        <td colspan = "8" style="text-align: left"><b readonly="readonly"><textarea onclick="moveMouseDont()"  id="editor" style="width: 100%;height: 240px"></textarea></b></td>
                     </tr>
                     </tbody>
                 </table>
             </div>
         </div>
         <div class="bot_btn">
-            <!--<a href="email" target="right"><input type="submit" onclick="inForEmailFunc()" value="发送" class="btn"/></a>-->
             <button class="btn"><a href="email" target="right" onclick="inForEmailFunc()">发送</a></button>
             <button class="btn" style="background-color: #aa5500">草稿</button>
             <button class="btn btn1"><a href="email" target="right">返回</a></button>
@@ -84,13 +82,26 @@
                         $('#hideAccessorys').html(value.accessory).hide();
                         $('#accessorys').html(value.accessory).hide();
                         $('#isMsgss').val(value.isMsgs);
-                        $('#senderNames').val(value.senderName);
-                        $('#senders').val(value.sender);
-                        $('#recipientss').val(value.recipients);
+                        $('#senders').val(value.recipients);
+                        $('#recipientss').val(value.sender);
                         UE.getEditor('editor').addListener("ready", function () {
                             //赋值
                             UE.getEditor('editor').setContent(value.emailContent);
                         })
+                    });
+                }else {
+                    console.log(result.message);
+                }
+            }
+        });
+        $.ajax({
+            type: "GET",
+            url: "email/isMsgsEmail/" + id,
+            dataType: "json",
+            success: function (result) {
+                if (result.code == 100) {
+                    $.each(result.data, function (index, value) {
+
                     });
                 }else {
                     console.log(result.message);
